service-skeleton_derive/tests/ui/unknown_field_attr.stderr
error: Unknown field: `something`. Available values: `default_value`, `encrypted`, `key_file_field`, `sensitive`, `value_parser`
 --> tests/ui/unknown_field_attr.rs:6:11
  |
6 |     #[config(something)]
  |              ^^^^^^^^^
